--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -40,7 +40,7 @@ h6 {
 .home-banner {
   height: 90vh;
   width: 100%;
-  max-width: 99vw;
+  max-width: 100vw;
 }
 .banner-img {
   max-height: 90vh;
